hphp/hack/test/typecheck/coeffects/poly_var_reassign/list_destructure.php
<?hh

function destruct(vec<int> $v)[$v::C]: void {
  list($v, $_) = $v;
}
